--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Hola Mundo</h1>
-    <h2>hola humano</h2>
+    <h2>hola humano2</h2>
+    <h3>holaaa</h3>
 </body>
 </html>
  
